# sequelize_project/swagger.yaml
@@ -16,17 +16,17 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: "#/components/schemas/User"
       responses:
-        '201':
+        "201":
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        '400':
+                $ref: "#/components/schemas/User"
+        "400":
           description: User already exists
-        '500':
+        "500":
           description: Internal server error
   /auth/login:
     post:
@@ -36,17 +36,17 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User2'
+              $ref: "#/components/schemas/User2"
       responses:
-        '200':
+        "200":
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        '401':
+                $ref: "#/components/schemas/User"
+        "401":
           description: Invalid email or password
-        '500':
+        "500":
           description: Internal server error
 
   /posts:
@@ -57,17 +57,33 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PostInput'
+              $ref: "#/components/schemas/PostInput"
       responses:
-        '201':
+        "201":
           description: Successful response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Post'
-        '401':
+                $ref: "#/components/schemas/Post"
+        "401":
           description: Unauthorized
-        '500':
+        "500":
+          description: Internal server error
+    get:
+      summary: Get all posts
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  posts:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/PostSummary"
+        "500":
           description: Internal server error
 
   /posts/{postId}/like:
@@ -80,17 +96,106 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: Post liked successfully
-        '400':
+        "400":
           description: User has already liked the post
+        "401":
+          description: Unauthorized
+        "404":
+          description: Post not found
+        "500":
+          description: Internal server error
+  /posts/{postId}/dislike:
+    post:
+      summary: dislike a post
+      parameters:
+        - in: path
+          name: postId
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Post disliked successfully
+        "400":
+          description: User has already disliked the post
+        "401":
+          description: Unauthorized
+        "404":
+          description: Post not found
+        "500":
+          description: Internal server error
+  /posts/{postId}:
+    get:
+      summary: Get one post
+      parameters:
+        - in: path
+          name: postId
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  posts:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/PostSummary"
+        "500":
+          description: Internal server error
+    put:
+      summary: Update a post
+      parameters:
+        - in: path
+          name: postId
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostInput'
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        '400':
+          description: Bad request
         '401':
           description: Unauthorized
         '404':
-          description: Post not found
+          description: Post not found or unauthorized
         '500':
           description: Internal server error
-      
+
+    delete:
+      summary: Delete a post
+      parameters:
+        - in: path
+          name: postId
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Post deleted successfully
+        '401':
+          description: Unauthorized
+        '404':
+          description: Post not found or unauthorized
+        '500':
+          description: Internal server error
 
 components:
   schemas:
@@ -142,7 +247,7 @@ components:
           type: integer
         numDislikes:
           type: integer
-        
+
     Post:
       type: object
       properties:
@@ -165,5 +270,4 @@ components:
           format: date-time
         updatedAt:
           type: string
-          format: date-time    
-                    
+          format: date-time
